--- a/netlify.toml
+++ b/netlify.toml
@@ -1,18 +1,14 @@
 [build]
-    command = "npm run build"
-    poblish = "dist"
+command = "npm run build"
+publish = "dist"
 
 [dev]
-    command = "vite"
-    port = 3000
-    targetPort = 5173
-
-[build]
-    command = "npm run buid"
-    publish = "dist"
+command = "vite"
+port = 3000
+targetPort = 5173
 
 [[redirects]]
-    from = "/*"
-    to = "/index.html"
-    status - 200
-    
+from = "/*"
+to = "/index.html"
+status = 200
+
